src/qml/GridBrowserDelegate.qml
@@ -23,6 +23,8 @@ import QtQuick.Layouts 1.2
 import QtGraphicalEffects 1.0
 import org.kde.kirigami 2.5 as Kirigami
 
+import org.kde.elisa 1.0
+
 FocusScope {
     id: gridEntry
 
