src/qml/ListBrowserDelegate.qml
@@ -26,7 +26,8 @@ import org.kde.elisa 1.0
 FocusScope {
     id: mediaTrack
 
-    property var databaseId
+    property url trackUrl
+    property var dataType
     property string title
     property string artist
     property string album
@@ -42,9 +43,9 @@ FocusScope {
     property bool detailedView: true
 
     signal clicked()
-    signal enqueue(var databaseId, var name)
-    signal replaceAndPlay(var databaseId, var name)
-    signal callOpenMetaDataView(var databaseId)
+    signal enqueue(var url, var entryType, var name)
+    signal replaceAndPlay(var url, var entryType, var name)
+    signal callOpenMetaDataView(var url, var entryType)
 
     Accessible.role: Accessible.ListItem
     Accessible.name: title
@@ -54,7 +55,7 @@ FocusScope {
         id: enqueueAction
         text: i18nc("Enqueue current track", "Enqueue")
         icon.name: "list-add"
-        onTriggered: enqueue(databaseId, title)
+        onTriggered: enqueue(trackUrl, dataType, title)
     }
 
     Action {
@@ -62,7 +63,7 @@ FocusScope {
         text: i18nc("Show track metadata", "View Details")
         icon.name: "help-about"
         onTriggered: {
-            callOpenMetaDataView(databaseId)
+            callOpenMetaDataView(trackUrl, dataType)
         }
     }
 
@@ -70,11 +71,11 @@ FocusScope {
         id: replaceAndPlayAction
         text: i18nc("Clear play list and enqueue current track", "Play Now and Replace Play List")
         icon.name: "media-playback-start"
-        onTriggered: replaceAndPlay(databaseId, title)
+        onTriggered: replaceAndPlay(trackUrl, dataType, title)
     }
 
-    Keys.onReturnPressed: enqueue(databaseId, title)
-    Keys.onEnterPressed: enqueue(databaseId, title)
+    Keys.onReturnPressed: enqueue(trackUrl, dataType, title)
+    Keys.onEnterPressed: enqueue(trackUrl, dataType, title)
 
     Rectangle {
         id: rowRoot
@@ -98,7 +99,7 @@ FocusScope {
             mediaTrack.clicked()
         }
 
-        onDoubleClicked: enqueue(databaseId, title)
+        onDoubleClicked: enqueue(trackUrl, dataType, title)
 
         RowLayout {
             anchors.fill: parent
@@ -110,8 +111,8 @@ FocusScope {
                 visible: !detailedView
 
                 text: {
-                    if (trackNumber !== 0) {
-                        if (artist !== albumArtist)
+                    if (trackNumber !== 0 && trackNumber !== -1 && trackNumber !== undefined) {
+                        if (albumArtist !== undefined && artist !== albumArtist)
                             return i18nc("%1: track number. %2: track title. %3: artist name",
                                          "<b>%1 - %2</b> - <i>%3</i>",
                                          trackNumber.toLocaleString(Qt.locale(), 'f', 0),
@@ -122,7 +123,7 @@ FocusScope {
                                          trackNumber.toLocaleString(Qt.locale(), 'f', 0),
                                          title);
                     } else {
-                        if (artist !== albumArtist)
+                        if (albumArtist !== undefined && artist !== albumArtist)
                             return i18nc("%1: track title. %2: artist name",
                                          "<b>%1</b> - <i>%2</i>",
                                          title, artist);
